# fozzie

./: .gitignore  calendar.db  env_sample  fix_and_push.ps1  fozzie.db  fozzie_test.db  my_new_fozzie.db  pyproject.toml  sample.env  schumer_pdf.py  setup.py  setup_git.py  sync_git.ps1  sync_git.sh
dev-snippets/: INSERT_expenses_recurring.sql  expenses_raw.sql
fozzie/: __init__.py  __main__.py
fozzie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fozzie/calendar/: calendar.db  school_days.py  test_zodiac.py
fozzie/cli/: __init__.py  main.py
fozzie/git/: __init__.py  setup.py
fozzie/json/: json_utils.py
fozzie/location/: geocode.py
fozzie/setup/: setup_fozzie.ps1
fozzie/sports/: fetch.py  notify.py
fozzie/tests/cli/: test_chorus.py  test_version.py
fozzie/tools/projects/: scaffold.py
fozzie/version/: version_manager.py
src/fozzie/: __init__.py  __main__.py  requirements.txt
src/fozzie/calendar/: date_dimension.py
src/fozzie/cli/: chorus.py  debug.py  sports.py  version.py
src/fozzie/data/: __init__.py  data_utils.py
src/fozzie/financial/: __main__.py  income_expense.db  tracker.py
src/fozzie/greet/: __init__.py  greet.py
src/fozzie/openai/: __init__.py  example.py  openai_utils.py
src/fozzie/sports/: config.py
src/fozzie/text/: __init__.py  text_utils.py
src/fozzie/tools/: bootstrap_ps_profile.py  fix_tests.py
src/fozzie/tools/git/: setup.py
tests/: test_greet.py
tests/cli/: test_chorus.py  test_version.py
